--- a/schedule.qmd
+++ b/schedule.qmd
@@ -284,40 +284,40 @@ The calendar below lists the tentative course topics. The dates listed are subje
 </tr>
 
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Nov. 17</td> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
-<!--   <a class="my-link" href="readings/12-model-selection.html"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;" rowspan="2">Model Selection: The 'Vintage' Methods</td> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
-<!--   <a class = "my-link" href="handouts/2021-10-26-notes-model-selection.pdf"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Nov. 17</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
+  <a class="my-link" href="readings/12-model-selection.html"><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;" rowspan="2">Model Selection: The 'Vintage' Methods</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
+  <a class = "my-link" href="handouts/2021-10-26-notes-model-selection.pdf"><span class="fas fa-link"></span></a>
+</td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Nov. 22</td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Nov. 22</td>
+</tr>
 
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="2">&nbsp;</td> -->
-<!-- <td>Nov. 29</td> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
-<!--   <a class="my-link" href="readings/13-cross-validation.html"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;" rowspan="2">Model Selection: Cross-Validation Methods</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class = "my-link" href="posts/2021-11-18-notes-cross-validation"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;" rowspan="2">&nbsp;</td>
+<td>Nov. 29</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
+  <a class="my-link" href="readings/13-cross-validation.html"><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;" rowspan="2">Model Selection: Cross-Validation Methods</td>
+<td align="center" style="vertical-align:middle;">
+  <a class = "my-link" href="posts/2021-11-18-notes-cross-validation"><span class="fas fa-link"></span></a>
+</td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Dec. 01</td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Dec. 01</td>
+</tr>
 
 
 
