--- a/schedule.qmd
+++ b/schedule.qmd
@@ -292,7 +292,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 </td>
 <td style="vertical-align:middle;" rowspan="2">Model Selection: The 'Vintage' Methods</td>
 <td align="center" style="vertical-align:middle;" rowspan="2">
-  <a class = "my-link" href="handouts/2021-10-26-notes-model-selection.pdf"><span class="fas fa-link"></span></a>
+  <a class = "my-link" href="../files/13-model-selection.pdf"><span class="fas fa-link"></span></a>
 </td>
 </tr>
 
@@ -310,7 +310,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 </td>
 <td style="vertical-align:middle;" rowspan="2">Model Selection: Cross-Validation Methods</td>
 <td align="center" style="vertical-align:middle;">
-  <a class = "my-link" href="posts/2021-11-18-notes-cross-validation"><span class="fas fa-link"></span></a>
+  <a class = "my-link" href="notes/14-notes-cross-validation.html"><span class="fas fa-link"></span></a>
 </td>
 </tr>
 
