--- a/schedule.qmd
+++ b/schedule.qmd
@@ -292,7 +292,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 </td>
 <td style="vertical-align:middle;" rowspan="2">Model Selection: The 'Vintage' Methods</td>
 <td align="center" style="vertical-align:middle;" rowspan="2">
-  <a class = "my-link" href="../files/13-model-selection.pdf"><span class="fas fa-link"></span></a>
+  <a class = "my-link" href="worksheets/13-model-selection.pdf"><span class="fas fa-link"></span></a>
 </td>
 </tr>
 
@@ -309,8 +309,8 @@ The calendar below lists the tentative course topics. The dates listed are subje
   <a class="my-link" href="readings/13-cross-validation.html"><span class="fa fa-book"></span></a>
 </td>
 <td style="vertical-align:middle;" rowspan="2">Model Selection: Cross-Validation Methods</td>
-<td align="center" style="vertical-align:middle;">
-  <a class = "my-link" href="notes/14-notes-cross-validation.html"><span class="fas fa-link"></span></a>
+<td align="center" style="vertical-align:middle;" rowspan="2">
+  <a class = "my-link" href="notes/14-cross-validation.html"><span class="fas fa-link"></span></a>
 </td>
 </tr>
 
