--- a/schedule.qmd
+++ b/schedule.qmd
@@ -303,7 +303,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 
 
 <tr>
-<td align="center" style="vertical-align:middle;" rowspan="2">&nbsp;</td>
+<td align="center" style="vertical-align:middle;" >&nbsp;</td>
 <td>Nov. 29</td>
 <td align="center" style="vertical-align:middle;" rowspan="2">
   <a class="my-link" href="readings/13-cross-validation.html"><span class="fa fa-book"></span></a>
@@ -318,6 +318,26 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <td align="center" style="vertical-align:middle;">&nbsp;</td>
 <td>Dec. 01</td>
 </tr>
+
+
+<!-- <tr> -->
+<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
+<!-- <td>Oct. 18</td> -->
+<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
+<!--   <a class="my-link" href="readings/08-diagnosing-collinearity.html"><span class="fa fa-book"></span></a> -->
+<!-- </td> -->
+<!-- <td style="vertical-align:middle;" rowspan="2">Diagnosing Collinearity</td> -->
+<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
+<!--   <a class = "my-link" href="notes/07-diagnosing-collinearity.html"><span class="fas fa-link"></span></a> -->
+<!-- </td> -->
+<!-- </tr> -->
+
+<!-- <tr> -->
+<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
+<!-- <td>Oct. 20</td> -->
+<!-- </tr> -->
+
+
 
 
 
